# LagrangianLM

./: .gitignore  LICENSE  PROJECT_SPEC.md  README.md  main.py  pyproject.toml
config/: model_config.yaml
lagrangianlm/data/: schemas.py
lagrangianlm/data/loaders/: __init__.py  base.py  hf_loader.py  jsonl_loader.py  text_loader.py
