[project]
name = "lagrangianlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "evaluate>=0.4.6",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.21.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
